Fix: broken layout when responsive

--- a/src/scss/base/_classes.scss
+++ b/src/scss/base/_classes.scss
@@ -6,10 +6,3 @@
   height: 1px;
   margin: -1px;
 }
-
-.container {
-  box-sizing: border-box;
-  width: 1280px;
-  height: inherit;
-  margin: 0 auto;
-}
